--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/Users/david/Desktop/Web Development/CSS - My Site/CSS/style.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="icon" href="favicon.ico">
   <meta charset="utf-8">
   <title></title>
