--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-picture" src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/Linkedin pfp.jpeg" alt="Picture of me">
+      <img class="profile-picture" src="Linkedin pfp.jpeg" alt="Picture of me">
       <h2>Hello.</h2>
       <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
