--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/cloud.png" alt="image of a cloud">
+    <img class="top-cloud" src="cloud.png" alt="image of a cloud">
     <h1>I'm David.</h1>
     <h2>A student.</h2>
-    <img class="bottom-cloud" src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/cloud.png" alt="image of a cloud">
-    <img src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/mountain.png" alt="image of a mountain">
+    <img class="bottom-cloud" src="cloud.png" alt="image of a cloud">
+    <img src="mountain.png" alt="image of a mountain">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -27,12 +27,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="html-css" src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/coding.png" alt="HTML/CSS">
+        <img class="coding.png" alt="HTML/CSS">
         <h3>HTML/CSS</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="social-media" src="/Users/david/Desktop/Web Development/CSS - My Site/CSS - My Site Images/brands-and-logotypes.png" alt="Social media">
+        <img class="social-media" src="brands-and-logotypes.png" alt="Social media">
         <h3>Social Media</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
