--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img src="coding.png" alt="HTML/CSS">
+        <img class="html-css" src="coding.png" alt="HTML/CSS">
         <h3>HTML/CSS</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
